@@ -4,7 +4,8 @@ collectd (4.1.2-1) experimental; urgency=low
     - Added options to collectd2html.pl to specify host and data directory
       (Closes: #438499).
     New plugins:
-    - Detailed Linux network interface and routing statistics: netlink
+    - Detailed Linux network interface and routing statistics: netlink (32bit
+      systems only)
     - Values from SNMP enabled network devices: snmp
     - Bitrate and frequency of music played with XMMS: xmms
   * Updated init script to wait for collectd to shut down (Closes: #422208).
